<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    >
 
    <ImageView 
		android:id="@+id/dimbackground"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scaleType="fitXY"
		android:src="@drawable/background_start_screen" 
		android:alpha="0.1"/>
	        
    <ImageView
     	android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/person_avatar" 
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/widget_padding_margin"
        android:contentDescription="@string/person_avatar" 
        />

    <Button
		android:id="@+id/button_update"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="@dimen/widget_padding_margin"
		android:text="@string/button_update"
		android:layout_alignParentBottom="true"
		android:layout_centerInParent="true"
	/>
    
    <EditText
	    android:id="@+id/person_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/widget_padding_margin"
        android:hint="@string/person_description"
		android:layout_below="@id/avatar"
		android:layout_above="@id/button_update" 
    />
	        
	<Spinner
		android:id="@+id/person_role"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:entries="@array/roles"
		android:prompt="@string/person_role" 
		android:layout_toRightOf="@id/avatar"
		android:layout_above="@id/person_description"
		android:paddingBottom="@dimen/widget_padding_margin"
		android:paddingLeft="@dimen/widget_padding_margin"
    />
	    	    
	<EditText
        android:id="@+id/person_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/person_name"
        android:layout_toRightOf="@id/avatar"
		android:layout_above="@id/person_role"
		android:paddingBottom="@dimen/widget_padding_margin"
		android:paddingLeft="@dimen/widget_padding_margin"
		
   	/>
	        
	<EditText
	    android:id="@+id/person_surename"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/person_surename" 
	    android:layout_toRightOf="@id/avatar"
		android:layout_above="@id/person_name"
	    android:paddingBottom="@dimen/widget_padding_margin"
		android:paddingLeft="@dimen/widget_padding_margin"
	/>
			

</RelativeLayout>